# animalitos

./: .gitignore  Dockerfile  docker-compose.yaml  prometheus.yml  pyproject.toml
app/: config.py  database.py  main.py
app/api/: routers.py
app/api/routes/: animal.py  zoo.py
app/graphql/: mutation.py  query.py  schema.py  types.py
app/models/: animal.py  zoo.py
app/services/: AnimalService.py  ImageUploadService.py  ZooService.py
